--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "slick";
 @import "home";
 @import "about";
+@import "product-item";
 @import "catalog";
 @import "subcatalog";
 @import "product";
