--- a/#src/scss/catalog.scss
+++ b/#src/scss/catalog.scss
@@ -14,151 +14,233 @@
 		letter-spacing: 0.12em;
 		font-size: 12px;
 	}
-
-	&__tabs {
+	&__row {
+		display: flex;
 		margin-top: 40px;
+		justify-content: space-between;
+	}
+	&__menu {
+		background-color: $color-orange;
+		margin-bottom: 30px;
+		position: relative;
+	}
+	&__aside {
+		min-width: 300px;
+	}
+	&__content {
+		margin-left: 30px;
+	}
+	&__title {
+		text-align: center;
+		font-size: 36px;
+		line-height: 42px;
+		margin-bottom: 30px;
+		text-transform: uppercase;
 	}
 }
 
-.tabs-catalog {
+.menu-catalog {
 	&__header {
 		display: flex;
-		flex-wrap: wrap;
-		margin: 0 -10px;
-		li {
-			padding: 0 10px 10px;
-			@media (max-width: 901px) {
-				flex: 0 0 50%;
-				min-width: 0;
-			}
-			@media (max-width: 590px) {
-				flex: 0 0 100%;
-			}
+		align-items: center;
+		padding: 20px;
+		color: #fff;
+		line-height: 1.2;
+	}
+
+	&__title {
+		flex: 1 1 auto;
+		font-size: 30px;
+		text-transform: uppercase;
+		letter-spacing: 0.75px;
+		font-weight: 700;
+	}
+
+	&__burger {
+		flex: 0 0 36px;
+		width: 36px;
+		height: 36px;
+		background-color: #e66b06;
+		position: relative;
+		cursor: pointer;
+		z-index: 5;
+		padding: 10px 6px;
+		& span {
+			transition: all 0.3s ease 0s;
+			top: calc(50% - 1px);
+			left: 0px;
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background-color: #fff;
+		}
+
+		& span:first-child {
+			top: 0px;
+		}
+
+		& span:last-child {
+			top: auto;
+			bottom: 0px;
+		}
+
+		&._active span {
+			transform: scale(0);
+		}
+
+		&._active span:first-child {
+			transform: rotate(-45deg);
+			top: calc(50% - 1px);
+		}
+
+		&._active span:last-child {
+			transform: rotate(45deg);
+			bottom: calc(50% - 1px);
 		}
 	}
 
-	&__item {
-		width: 272px;
-		height: 140px;
-		overflow: hidden;
-		text-align: center;
+	&__lines {
+		height: 16px;
 		position: relative;
-		transition: all 0.3s;
-		border-radius: 10px;
-		@media (max-width: 901px) {
-			width: 100%;
-		}
-		@media (max-width: 590px) {
-			height: 100px;
-		}
-		&._active,
-		&:hover {
-			border: 3px solid #ff7300;
-		}
-		&::before {
-			content: "";
-			transition: all 0.3s;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-color: rgba(#000, 0.5);
-			display: block;
-			position: absolute;
-		}
-		span {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			opacity: 1;
-			color: #fff;
-			text-transform: uppercase;
-			letter-spacing: -0.2px;
-			display: block;
-			@extend %roboto-mono-bold;
-			@media (max-width: 590px) {
-				left: 0;
-				transform: translate(0, -50%);
-				right: 0;
-			}
-		}
-		img {
-			object-fit: cover;
-		}
 	}
 
 	&__body {
-		margin-top: 40px;
-	}
-
-	&__content {
-		&._tabs-block {
-			display: none;
-		}
-		&._active {
-			display: flex;
-		}
-	}
-	&__subheader {
-		flex: 0 1 40%;
-		border-right: 1px solid rgba(#000, 0.4);
-	}
-
-	&__subbody {
-		flex: 0 1 60%;
-	}
-}
-.subheader-tabs-catalog {
-	&__item {
-		text-transform: uppercase;
-		color: $color-text;
-		font-weight: 700;
-		margin-bottom: 15px;
-		transition: all 0.3s color;
-		font-size: 20px;
-		&.active,
-		&:hover {
-			color: $color-orange;
-		}
-	}
-}
-.subbody-tabs-catalog {
-	&__content {
-		padding: 0 15px 0 25px;
 		display: none;
-		&.active {
-			display: flex;
+	}
+
+	&__list {
+		& > li {
+			border-bottom: 1px solid rgba(#fff, 0.6);
+		}
+		& > li:last-child {
+			border-bottom: 0px;
 		}
 	}
 
-	&__column {
-		flex: 0 1 33.333%;
-		margin-right: 15px;
-		&:last-child {
-			margin-right: 0;
+	&__parent {
+		&._active {
+			& .submenu-catalog__menu {
+				pointer-events: all;
+				display: block;
+				overflow-y: auto;
+				&::-webkit-scrollbar {
+					border-radius: 7px;
+					width: 7px;
+					background-color: #f9f9fd;
+				}
+				&::-webkit-scrollbar-thumb {
+					border-radius: 7px;
+					background-color: $color-text;
+				}
+				&::-webkit-scrollbar-track {
+					border-radius: 7px;
+					background-color: #f9f9fd;
+				}
+			}
+			& .menu-catalog__link {
+				background-color: #e66b06;
+			}
+		}
+		& .menu-catalog__link {
+			&::after {
+				content: "";
+				position: absolute;
+				transition: all 0.3s ease 0s;
+				right: 10px;
+				width: 14px;
+				height: 14px;
+				top: 50%;
+				transform: translateY(-50%);
+				background: url(../img/icons/menu-arrow-w.svg) 0 0 no-repeat;
+				background-size: cover;
+			}
 		}
 	}
 
 	&__link {
+		position: relative;
+		padding: 12px 20px;
+		letter-spacing: 0.3px;
+		color: #fff;
 		display: block;
-		width: fit-content;
-		color: $color-text;
-		margin-bottom: 10px;
-		// padding-bottom: 2px;
-		border-bottom: 1px solid transparent;
-		transition: all 0.3s;
 		&:hover {
-			border-bottom: 1px solid $color-text;
+			background-color: #e66b06;
 		}
 	}
+}
 
-	&__seria {
-		text-align: center;
+.submenu-catalog {
+	&__menu {
+		@media (min-width: 991.98px) {
+			width: 100%;
+			position: absolute;
+			top: 0;
+			left: 100%;
+			height: 100%;
+			overflow: hidden;
+			pointer-events: none;
+			display: none;
+			border: 3px solid $color-orange;
+			border-left: 0px;
+			background-color: #ffffff;
+		}
+	}
+	&__parent {
+		&._active {
+			.submenu-catalog__body {
+				display: block;
+			}
+			.submenu-catalog__link {
+				&::after {
+					transform: rotate(-90deg);
+				}
+			}
+		}
+	}
+	&__link {
 		text-transform: uppercase;
-		color: $color-green;
-		font-weight: 700;
-		letter-spacing: 0.125em;
-		font-size: 18px;
+		color: $color-text;
+		border-bottom: 1px solid rgba($color-orange, 0.5);
+		display: block;
+		padding: 12px 20px;
+		letter-spacing: 0.3px;
+		position: relative;
+		&:hover {
+			background-color: rgba($color-orange, 0.3);
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			transition: all 0.3s ease 0s;
+			right: 10px;
+			width: 14px;
+			height: 14px;
+			top: calc(50% - 7px);
+			transform: rotate(90deg);
+			background: url(../img/icons/menu-arrow.svg) 0 0 no-repeat;
+			background-size: cover;
+			transition: all 0.3s ease 0s;
+		}
+	}
+	&__body {
+		display: none;
+		transition: all 0.3s ease 0s;
+	}
+
+	&__items {
+		padding: 20px;
+		border-bottom: 1px solid rgba($color-orange, 0.5);
+	}
+}
+
+.items-submenu-catalog {
+	&__link {
+		color: $color-text;
+		font-size: 14px;
+		line-height: 1.5;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
