--- a/#src/scss/_global.scss
+++ b/#src/scss/_global.scss
@@ -19,6 +19,19 @@ body {
 	font-size: 16px;
 	line-height: 24px;
 	@extend %roboto-mono-regular;
+	&::-webkit-scrollbar {
+		border-radius: 7px;
+		width: 15px;
+		background-color: #f9f9fd;
+	}
+	&::-webkit-scrollbar-thumb {
+		border-radius: 7px;
+		background-color: $color-text;
+	}
+	&::-webkit-scrollbar-track {
+		border-radius: 7px;
+		background-color: #f9f9fd;
+	}
 }
 body._lock {
 	overflow: hidden;
@@ -213,9 +226,25 @@ img {
 }
 
 .breadcrumbs {
-	padding: 20px 0 40px;
+	padding: 20px 0 0;
+	margin-bottom: 40px;
 	overflow-x: auto;
+	&::-webkit-scrollbar {
+		border-radius: 7px;
+		width: 7px;
+		height: 3px;
+		background-color: #f9f9fd;
+	}
+	&::-webkit-scrollbar-thumb {
+		border-radius: 7px;
+		background-color: $color-text;
+	}
+	&::-webkit-scrollbar-track {
+		border-radius: 7px;
+		background-color: #f9f9fd;
+	}
 	&__list {
+		white-space: nowrap;
 		li {
 			display: inline-block;
 			a {
@@ -254,6 +283,9 @@ img {
 			color: $color-text;
 			transition: all 0.3s;
 			border-radius: 3px;
+			@media (max-width: 340px) {
+				width: 40px;
+			}
 			&.active {
 				background-color: $color-orange;
 				color: #fff;
