--- a/#src/scss/contacts.scss
+++ b/#src/scss/contacts.scss
@@ -55,6 +55,9 @@
 		&._active {
 			display: flex;
 			justify-content: space-between;
+			@media (max-width: 1170px) {
+				flex-direction: column;
+			}
 		}
 	}
 
@@ -70,5 +73,21 @@
 	&__map {
 		box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 		transform: translateY(-200px);
+		@media (max-width: 1170px) {
+			margin-top: 30px;
+			transform: translateY(0);
+			iframe {
+				width: 100%;
+				@media (max-width: 460px) {
+					height: 340px;
+				}
+				@media (max-width: 380px) {
+					height: 300px;
+				}
+				@media (max-width: 340px) {
+					height: 240px;
+				}
+			}
+		}
 	}
 }
