--- a/#src/scss/subcatalog.scss
+++ b/#src/scss/subcatalog.scss
@@ -3,8 +3,8 @@
 	padding: 20px 0 90px;
 	&__title {
 		text-align: center;
-		font-size: 36px;
-		line-height: 42px;
+		@include adaptiv-font(36, 28);
+		line-height: 1.2;
 		margin-bottom: 30px;
 		text-transform: uppercase;
 	}
