--- a/#src/scss/information.scss
+++ b/#src/scss/information.scss
@@ -9,29 +9,45 @@
 	&__nav {
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: center;
+		flex-wrap: wrap;
+		padding: 0 10px;
+		@media (max-width: 1116px) {
+			flex-wrap: wrap;
+			justify-content: flex-start;
+		}
+		@media (max-width: 695px) {
+			justify-content: center;
+		}
 	}
 
 	&__item {
 		@extend %btn;
+		width: 200px;
 		text-transform: uppercase;
 		cursor: pointer;
 		height: 30px;
 		background-color: transparent;
 		color: $color-text;
-		// margin-right: 10px;
+		margin: 0 5px;
 		transition: all 0.3s;
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		&:last-child {
-			margin-right: 0;
-		}
+
 		&:hover,
 		&._active {
 			background-color: $color-orange;
 			color: #fff;
 		}
+		@media (max-width: 1116px) {
+			margin-bottom: 10px;
+		}
+	}
+	&__title {
+		text-transform: uppercase;
+		text-align: center;
+		margin-top: 30px;
 	}
 
 	&__body {
@@ -42,8 +58,10 @@
 .block-content-information {
 	&__text {
 		max-width: 780px;
+
 		li {
 			list-style: inherit;
 		}
+		@include default-h;
 	}
 }
