--- a/#src/scss/information.scss
+++ b/#src/scss/information.scss
@@ -2,7 +2,8 @@
 
 .information {
 	padding: 70px 0 90px;
-	&__content {
+	@media (max-width: 991.98px) {
+		padding: 58px 0;
 	}
 }
 .content-information {
