--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -1,7 +1,10 @@
 //product
 
 .product {
-	padding: 20px 0 90px;
+	padding: 40px 0 90px;
+	@media (max-width: 991.98px) {
+		padding: 30px 0;
+	}
 
 	&__title {
 		text-align: center;
