--- a/#src/scss/contacts.scss
+++ b/#src/scss/contacts.scss
@@ -1,6 +1,9 @@
 //contacts
 .contacts {
-	padding: 50px 0 100px;
+	padding: 40px 0 90px;
+	@media (max-width: 991.98px) {
+		padding: 30px 0;
+	}
 
 	&__phone,
 	&__mail {
