--- a/#src/scss/product-item.scss
+++ b/#src/scss/product-item.scss
@@ -11,6 +11,8 @@
 		border: 1px solid $color-orange;
 		border-radius: 5px;
 		padding: 15px;
+		display: flex;
+		flex-direction: column;
 		text-align: center;
 		background-color: #fff;
 		@media (max-width: 768px) {
@@ -27,6 +29,7 @@
 		font-weight: 600;
 		margin-bottom: 20px;
 		font-size: 14px;
+		flex: 0 0 auto;
 	}
 	img {
 		width: 70px;
@@ -39,8 +42,12 @@
 		font-size: 14px;
 	}
 	&__more {
+		flex: 0 0 auto;
 		@extend %btn;
 		width: 100%;
 		height: 40px;
+	}
+	&__box {
+		flex: 1 0 auto;
 	}
 }
