--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,102 +1,70 @@
 .section-top {
 	margin-top: 58px;
 
-	&__inner {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
+	&__slider {
 		position: relative;
-		@media (max-width: 840px) {
-			justify-content: center;
-		}
 	}
 
-	&__box {
-		text-transform: uppercase;
-		@media (max-width: 800px) {
-			text-align: center;
-		}
+	&__slider-body {
+		overflow: hidden;
 	}
 
-	&__title {
-		color: #4c75b2;
-		white-space: nowrap;
-		@extend %sans-narrow-bold;
-		@include adaptiv-font(72, 57);
-		line-height: 1.1;
-		letter-spacing: 0.275em;
+	&__slide {
+		flex: 0 0 100%;
+		min-width: 0;
+		padding: 0 0 50%;
 	}
 
-	&__text-box {
-		margin-top: 40px;
+	&__dots {
+		position: absolute;
+		bottom: 20px;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 2;
 		display: flex;
-		align-items: center;
-		margin-bottom: 60px;
-		margin-right: 5px;
-		@media (max-width: 410px) {
-			flex-direction: column;
-			margin: 40px 0;
-		}
-	}
-
-	&__percent {
-		@extend %sans-narrow-regular;
-		font-size: 72px;
-		line-height: 74px;
-		letter-spacing: 0.275em;
-	}
-
-	&__text {
-		@extend %roboto-mono-bold;
-		font-size: 18px;
-		letter-spacing: 0.1em;
-		span {
+		.swiper-pagination-bullet {
+			width: 10px;
+			height: 10px;
+			border: 1px solid #000;
+			background-color: #000;
 			display: block;
-			font-size: 12px;
-			letter-spacing: 0.06em;
-			margin-top: 10px;
+			margin: 0 5px;
+			border-radius: 50%;
+		}
+		.swiper-pagination-bullet-active {
+			background-color: #fff;
+			border: 1px solid #fff;
 		}
 	}
 
-	&__btn {
-		@extend %btn;
-		@media (max-width: 800px) {
-			margin: 0 auto;
-		}
-	}
-
-	&__img {
-		position: relative;
-		&::before {
-			content: "";
-			display: block;
-			background-color: #00760c;
-			position: absolute;
+	&__arrows {
+		cursor: pointer;
+		position: absolute;
+		z-index: 2;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		line-height: 0;
+		width: 40px;
+		height: 40px;
+		svg {
 			width: 100%;
 			height: 100%;
-			z-index: -1;
-			transform: translate(200px, 100px);
 		}
-		img {
-			max-width: 782px;
+		&:focus {
+			outline: none;
 		}
-		@media (max-width: 991.98px) {
-			&::before {
-				display: none;
-			}
-		}
-		@media (max-width: 800px) {
-			img {
-				display: none;
-			}
-		}
+	}
+	&__arrow-next {
+		right: 0;
+		left: auto;
 	}
 }
 
 .products {
-	margin-top: 190px;
+	padding: 120px 0;
 	@media (max-width: 991.98px) {
-		margin-top: 58px;
+		padding: 58px 0;
 	}
 	&__inner {
 		display: flex;
