--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -244,25 +244,59 @@
 			}
 		}
 
-		&__text {
-			margin-top: 0;
-			max-width: 560px;
-			@extend %roboto-mono-bold;
-			text-transform: uppercase;
-			letter-spacing: 0.12em;
-			font-size: 14px;
-			margin-right: 10px;
-			@media (max-width: 991.98px) {
-				max-width: 100%;
-				margin-right: 0;
-				margin-bottom: 20px;
-			}
-		}
+		&__list {
+			margin-right: 20px;
+			max-width: 750px;
+			width: 100%;
 
+			height: fit-content;
+		}
 		&__img {
 			img {
 				max-width: 484px;
 			}
+		}
+	}
+	.list-vacancies {
+		li {
+			border: 1px solid $color-text;
+			margin: 0px 0px 10px;
+			&:last-child {
+				.list-vacancies__name {
+				}
+			}
+			&._active {
+				.list-vacancies__desc {
+					display: block;
+				}
+				.list-vacancies__name {
+					border-bottom: 1px solid $color-text;
+					&::after {
+						content: "-";
+					}
+				}
+			}
+		}
+		&__name {
+			color: $color-text;
+			font-size: 18px;
+			padding: 10px;
+			display: block;
+			position: relative;
+			&::after {
+				content: "+";
+				position: absolute;
+				right: 10px;
+				font-size: 20px;
+			}
+		}
+
+		&__desc {
+			color: $color-text;
+			font-size: 14px;
+			padding: 10px;
+			line-height: 1.5;
+			display: none;
 		}
 	}
 
