--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -82,13 +82,6 @@
 	}
 
 	&-news {
-		&__inner {
-			p {
-				text-transform: uppercase;
-				@extend %roboto-mono-bold;
-				letter-spacing: 0.12em;
-			}
-		}
 	}
 
 	&-gallery {
@@ -148,25 +141,65 @@
 			}
 		}
 
-		&__text {
-			margin-top: 0;
-			max-width: 560px;
-			@extend %roboto-mono-bold;
-			text-transform: uppercase;
-			letter-spacing: 0.12em;
-			font-size: 14px;
-			margin-right: 10px;
+		&__list {
+			width: 55%;
+			margin-right: 20px;
 			@media (max-width: 991.98px) {
-				max-width: 100%;
+				width: 100%;
 				margin-right: 0;
-				margin-bottom: 20px;
 			}
 		}
 
 		&__img {
-			img {
-				max-width: 484px;
+			max-width: 465px;
+			width: 100%;
+			height: 300px;
+			background-size: cover;
+			background-repeat: no-repeat;
+			&:hover {
+				transform: scale(1);
 			}
+			@media (max-width: 991.98px) {
+				display: none;
+			}
+		}
+	}
+	.list-vacancies {
+		&__item {
+			margin-bottom: 10px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		&__name {
+			font-size: 18px;
+			font-weight: 600;
+			cursor: pointer;
+			padding: 10px;
+			position: relative;
+			background-color: $color-orange;
+			color: #fff;
+			transition: background-color 0.2s ease;
+			&:hover {
+				background-color: darken($color-orange, 3);
+			}
+
+			&::after {
+				content: "+";
+				position: absolute;
+				right: 10px;
+			}
+			&._active {
+				&::after {
+					content: "-";
+				}
+			}
+		}
+
+		&__desc {
+			display: none;
+			padding: 10px;
+			font-size: 14px;
 		}
 	}
 
