--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,89 +1,11 @@
 .section-top {
 	margin-top: 58px;
 
-	&__inner {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		position: relative;
-		@media (max-width: 840px) {
-			justify-content: center;
-		}
-	}
-
-	&__box {
-		text-transform: uppercase;
-		@media (max-width: 800px) {
-			text-align: center;
-		}
-	}
-
-	&__title {
-		color: #4c75b2;
-		white-space: nowrap;
-		@extend %sans-narrow-bold;
-		@include adaptiv-font(72, 57);
-		line-height: 1.1;
-		letter-spacing: 0.275em;
-	}
-
-	&__text-box {
-		margin-top: 40px;
-		display: flex;
-		align-items: center;
-		margin-bottom: 60px;
-		margin-right: 5px;
-		@media (max-width: 410px) {
-			flex-direction: column;
-			margin: 40px 0;
-		}
-	}
-
-	&__percent {
-		@extend %sans-narrow-regular;
-		font-size: 72px;
-		line-height: 74px;
-		letter-spacing: 0.275em;
-	}
-
-	&__text {
-		@extend %roboto-mono-bold;
-		font-size: 18px;
-		letter-spacing: 0.1em;
-		span {
-			display: block;
-			font-size: 12px;
-			letter-spacing: 0.06em;
-			margin-top: 10px;
-		}
-	}
-
-	&__btn {
-		@extend %btn;
-		@media (max-width: 800px) {
-			margin: 0 auto;
-		}
-	}
-
 	&__img {
-		position: relative;
-		&::before {
-			content: "";
-			display: block;
-			background-color: #00760c;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: -1;
-			transform: translate(200px, 100px);
-		}
-		img {
-			max-width: 782px;
-		}
-		@media (max-width: 991.98px) {
-			&::before {
-				display: none;
-			}
+		padding-bottom: 29.6%;
+		overflow: hidden;
+		background-position: center;
+		&:hover {
 		}
 		@media (max-width: 800px) {
 			img {
@@ -94,7 +16,7 @@
 }
 
 .products {
-	margin-top: 190px;
+	margin-top: 90px;
 	@media (max-width: 991.98px) {
 		margin-top: 58px;
 	}
@@ -257,7 +179,7 @@
 	}
 }
 .about-home {
-	padding: 120px 0;
+	padding: 90px 0;
 	@media (max-width: 991.98px) {
 		padding: 58px 0;
 	}
@@ -297,7 +219,10 @@
 	border-top: 3px dashed $color-text;
 	border-bottom: 3px dashed $color-text;
 	padding: 25px 0;
-	margin-bottom: 58px;
+	margin-bottom: 90px;
+	@media (max-width: 991.98px) {
+		margin-bottom: 58px;
+	}
 	&__inner {
 		position: relative;
 		z-index: 1;
